# 1c-task

./: .gitignore  CMakeLists.txt  README.md  main.cpp  solution.cpp  solution.h  suffmachine.h
.github/workflows/: main.yml
testfiles/: bigger.txt
tests/: CMakeLists.txt  main_tests.cpp  tests.cpp
